Improve style : remove outline on category option, fix incorrectly overflow on body

--- a/src/assets/css/category.css
+++ b/src/assets/css/category.css
@@ -45,6 +45,10 @@
     width: 85%;  
   }  
 
+  .category-option >.slick-slider .slick-slide .option {
+    outline: none;
+  }
+
   .category-option > .slick-slider .slick-slide > div {
     display: flex;
     justify-content: center;
